...
    <string name="loading_check_facebook_token_validity">Facebook token validity is checked on our server…</string>
    <string name="loading_check_oauth_username">Username availability is checked on our server…</string>
    <string name="loading_facebook_exchange_token">Facebook token is exchanged on our server…</string>
    <string name="loading_facebook_login">Facebook login is completed on our server…</string>
    <string name="loading_google_exchange_code">Google+ code is exchanged on our server…</string>
    <string name="loading_google_login">Google+ login is completed on our server…</string>
    <string name="background">Background</string>
    <string name="stage">Stage</string>
    <string name="ok">OK</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="name_exists">Name already exists</string>
    <string name="no_name">No name</string>
...
    <!--  -->

    <!-- New scene dialog -->
    <string name="new_scene_dialog_hint">My Scene</string>
    <string name="new_scene_name">Scene name</string>
    <string name="new_scene_dialog_title">New Scene</string>
    <string name="rename_scene_dialog">Rename Scene</string>
    <string name="scene_name">Scene name:</string>
    <!--  -->

    <!-- Merge Scene Dialog -->
    <string name="merge_scene_option">Merge Scenes</string>
    <string name="merge_scene_label_one">Merge</string>
...
    <!--  -->

    <!-- New sprite dialog -->
    <string name="new_sprite_dialog_default_sprite_name">My Object</string>
    <string name="new_sprite_dialog_title">New Object</string>
    <string name="spritename_already_exists">Please choose another object name.</string>
    <string name="rename_sprite_dialog">Rename Object</string>
    <string name="spritename_invalid">This object name is invalid</string>
    <string name="no_spritename_entered">Please enter an object name.</string>
    <string name="sprite_name">Object name:</string>
    <!--  -->

    <!-- Sign In dialogs -->
...
    <!-- -->

    <!-- Brick Data Editor Strings -->
    <string name="brick_data_editor_title">Brick editor</string>
    <string name="separator">|</string>
    <string name="add_text">Add text</string>
    <string name="edit_text">Edit text</string>
    <string name="text_hint">Brick text</string>
    <string name="add_variable">Add variable</string>
    <string name="add_line_break">Add line break</string>
    <string name="edit_variable">Edit variable</string>
    <string name="variable_hint">Variable name</string>
    <string name="brick_show_variable">Show variable</string>
...
